Створено за допомогою Colab

--- a/TSAI_Classification_PIPELINE_bestResult.ipynb
+++ b/TSAI_Classification_PIPELINE_bestResult.ipynb
@@ -613,7 +613,7 @@
         "         'InceptionTimePlus62x62', 'InceptionTimeXLPlus', 'InceptionTimePlus', 'InCoordTime', 'XCoordTime', 'MultiInceptionTimePlus',\n",
         "         'MiniRocketPlus', 'InceptionRocketPlus', 'MiniRocket', 'MLP', 'MultiRocket', 'MultiRocketPlus', 'OmniScaleCNN', 'RNN', 'LSTM',\n",
         "         'GRU', 'RNNAttention', 'LSTMAttention', 'GRUAttention', 'RNNAttentionPlus', 'LSTMAttentionPlus', 'GRUAttentionPlus', 'RNNPlus',\n",
-        "    'LSTMPlus', 'GRUPlus', 'RNN_FCN', 'LSTM_FCN', 'GRU_FCN', 'MRNN_FCN', 'MLSTM_FCN', 'MGRU_FCN', '  ', 'LSTM_FCNPlus',\n",
+        "    'LSTMPlus', 'GRUPlus', 'RNN_FCN', 'LSTM_FCN', 'GRU_FCN', 'MRNN_FCN', 'MLSTM_FCN', 'MGRU_FCN', 'RNN_FCNPlus', 'LSTM_FCNPlus',\n",
         "         'GRU_FCNPlus', 'MRNN_FCNPlus', 'MLSTM_FCNPlus', 'MGRU_FCNPlus', 'ResCNN', 'ResNet', 'ResNetPlus', 'TCN', 'TSSequencer',\n",
         "         'TSSequencerPlus', 'TST', 'TSTPlus', 'MultiTSTPlus', 'TSiT', 'TSiTPlus', 'TransformerModel', 'XCM', 'XCMPlus', 'XResNet1dPlus',\n",
         "         'xresnet1d18plus', 'xresnet1d34plus', 'xresnet1d50plus', 'xresnet1d101plus', 'xresnet1d152plus', 'xresnet1d18_deepplus',\n",
